# SPARC

./: LICENSE  README.md
Data/Results/Fig3B-FEA vs Calibration/: Calibration.csv  FEA.csv
Data/Results/Fig3D-Wall thickness/: Data.xlsx
Data/Results/Fig4C-H-Trajectory_following/S-shape curve/: error-step.mat  forefoot_x.txt  forefoot_z.txt  hindfoot_x.txt  hindfoot_z.txt
Data/Results/Fig4C-H-Trajectory_following/S-shape square/: error-step.mat  forefoot_x.txt  forefoot_z.txt  hindfoot_x.txt  hindfoot_z.txt
Data/Results/Fig4C-H-Trajectory_following/Vertical semicircle/: error-step.mat  forefoot_x.txt  forefoot_z.txt  hindfoot_x.txt  hindfoot_z.txt
Data/Results/Fig4C-H-Trajectory_following/Vertical straight line/: error-step.mat  forefoot_x.txt  forefoot_z.txt  hindfoot_x.txt  hindfoot_z.txt
Data/Results/Fig5-Transition/: Transition.txt
arduino/: AS5600_IIC.cpp  AS5600_IIC.h  DAC.cpp  DAC.h  LTC2664.cpp  LTC2664.h  arduino.ino  cavity.cpp  cavity.h  sucker.cpp  sucker.h
ros_code/catkin/: build.sh  launch_controller.sh  launch_optrack_reader.sh  launch_read_keyboard.sh
ros_code/catkin/src/controller/: CMakeLists.txt  package.xml
ros_code/catkin/src/controller/include/: MPCR.h  cavity.h  characterization.h  common.h  communicator.h  gen_path.h  keyboard_controller.h  logger.h  pure_pursuit.h  sensor.h
ros_code/catkin/src/controller/src/: gen_path.cpp  keyboard_controller.cpp  main.cpp  pure_pursuit.cpp
ros_code/catkin/src/read_keyboard/: CMakeLists.txt  package.xml
ros_code/catkin/src/read_keyboard/src/: read_keyboard.cpp
(+4 files in other folders)
